PAY-1013 get all payment methods
