# lara-app/swagger/api/v1/PaymentMethodsRoutes.yaml
@@ -1,4 +1,148 @@
 "/payment-methods":
+  get:
+    tags:
+      - payment methods
+    summary: "Get all payment methods"
+    description: "This endpoint retrieve all payment methods."
+    operationId: getPaymentMethods
+    parameters:
+      - name: per_page
+        in: query
+        description: Number of items to return per page
+        required: false
+        schema:
+          type: integer
+          default: 15
+    responses:
+      '200':
+        description: "The payment methods was retrieved successfully."
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                items:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      ulid:
+                        type: string
+                        example: 01HZS10Y46YV2J6BPBDERRD4MG
+                      user:
+                        type: object
+                        properties:
+                          ulid:
+                            type: string
+                            example: 01HZRS9CQFDF3PAJF9FTDC1YNN
+                          first_name:
+                            type: string
+                            example: null
+                          last_name:
+                            type: string
+                            example: null
+                          email:
+                            type: string
+                            example: 1@example.com
+                          status:
+                            type: string
+                            example: active
+                          created_at:
+                            type: string
+                            format: date-time
+                            example: '2024-06-07T07:23:25.000000Z'
+                          updated_at:
+                            type: string
+                            format: date-time
+                            example: '2024-06-07T07:23:25.000000Z'
+                          roles:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                name:
+                                  type: string
+                                  example: applicant
+                                created_at:
+                                  type: string
+                                  format: date-time
+                                  example: '2024-06-07T07:03:41.000000Z'
+                                updated_at:
+                                  type: string
+                                  format: date-time
+                                  example: '2024-06-07T07:03:41.000000Z'
+                      payment_method:
+                        type: object
+                        properties:
+                          ulid:
+                            type: string
+                            example: 01HZS10XZZNXHAMJNS3ZXAXDQ5
+                          type:
+                            type: string
+                            example: rial_bank
+                          holder_name:
+                            type: string
+                            example: '122222'
+                          bank_name:
+                            type: string
+                            example: رسالت
+                          card_number:
+                            type: string
+                            example: '6274129005473742'
+                          sheba:
+                            type: string
+                            example: IR062960000000100324200001
+                          account_no:
+                            type: string
+                            example: '10996491'
+                          is_active:
+                            type: boolean
+                            example: true
+                          created_at:
+                            type: string
+                            format: date-time
+                            example: '2024-06-07T09:38:36.000000Z'
+                          updated_at:
+                            type: string
+                            format: date-time
+                            example: '2024-06-07T09:38:36.000000Z'
+                pagination:
+                  type: object
+                  properties:
+                    current_page:
+                      type: integer
+                      example: 1
+                    first_page_url:
+                      type: string
+                      example: http://url.com/api/v1/payment-methods?page=1
+                    from:
+                      type: integer
+                      example: 1
+                    last_page:
+                      type: integer
+                      example: 1
+                    last_page_url:
+                      type: string
+                      example: http://url.com/api/v1/payment-methods?page=1
+                    next_page_url:
+                      type: string
+                      example: null
+                    path:
+                      type: string
+                      example: http://url.com/api/v1/payment-methods
+                    per_page:
+                      type: integer
+                      example: 15
+                    prev_page_url:
+                      type: string
+                      example: null
+                    to:
+                      type: integer
+                      example: 3
+                    total:
+                      type: integer
+                      example: 3
+
   post:
     tags:
       - payment methods
@@ -114,4 +258,6 @@
                       type: string
                       format: date-time
                       example: "2024-06-07T08:09:31.000000Z"
+
+
 
